--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,14 @@
 {
-  "name": "Bank App",
-  "short_name": "BankApp",
-  "start_url": "/index.html",
-  "scope": "/",
+  "name": "Cash App Bank UI",
+  "short_name": "CashApp",
+  "start_url": "index.html",
+  "scope": "./",
   "display": "standalone",
-  "theme_color": "#0055aa",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "/unnamed.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/unnamed.png",
+      "src": "unnamed.png",
       "sizes": "512x512",
       "type": "image/png"
     }
